// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Core/Textarea Auto Rows 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 hExPlF sc-eFegNN gAaKNc"
  >
    <textarea
      class="StyledTextArea-sc-17i3mwp-0 cUKiYJ sc-lbhJGD fBtFQY sc-iNGGcK iIzCpx"
    />
  </div>
</div>
`;

exports[`Storyshots Core/Textarea Default 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 hExPlF sc-eFegNN gAaKNc"
  >
    <textarea
      class="StyledTextArea-sc-17i3mwp-0 cUKiYJ sc-lbhJGD fBtFQY sc-iNGGcK iIzCpx"
    />
  </div>
</div>
`;

exports[`Storyshots Core/Textarea Disabled 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 hExPlF sc-eFegNN gAaKNc"
  >
    <textarea
      class="StyledTextArea-sc-17i3mwp-0 kLJdsH sc-lbhJGD bBKjjH sc-iNGGcK iIzCpx"
      disabled=""
    />
  </div>
</div>
`;

exports[`Storyshots Core/Textarea Min Max Rows 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 hExPlF sc-eFegNN gAaKNc"
  >
    <textarea
      class="StyledTextArea-sc-17i3mwp-0 cUKiYJ sc-lbhJGD fBtFQY sc-iNGGcK iIzCpx"
      rows="4"
    />
  </div>
</div>
`;

exports[`Storyshots Core/Textarea Monospace 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 hExPlF sc-eFegNN gAaKNc"
  >
    <textarea
      class="StyledTextArea-sc-17i3mwp-0 cUKiYJ sc-lbhJGD dnDOa-d sc-iNGGcK iIzCpx"
      placeholder="Type something..."
    />
  </div>
</div>
`;

exports[`Storyshots Core/Textarea Read Only 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 hExPlF sc-eFegNN gAaKNc"
  >
    <textarea
      class="StyledTextArea-sc-17i3mwp-0 cUKiYJ sc-lbhJGD fBtFQY sc-iNGGcK iIzCpx"
      readonly=""
    />
  </div>
</div>
`;

exports[`Storyshots Core/Textarea With Placeholder 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 hExPlF sc-eFegNN gAaKNc"
  >
    <textarea
      class="StyledTextArea-sc-17i3mwp-0 cUKiYJ sc-lbhJGD fBtFQY sc-iNGGcK iIzCpx"
      placeholder="Type something..."
    />
  </div>
</div>
`;
